--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "openai": "^4.0.0",
+    "strip-ansi": "^7.1.0",
     "yaml": "^2.5.0"
   },
   "devDependencies": {
