Integrate INI-based prompt mapping
  - Rename Applicability.ts to PromptMapping.ts
  - Rename APIs to readPromptMappingFromIni/resolvePromptMapping
  - Inject mapping filter into CLI evaluation loop
  - Derive alias from prompt path; add fullPath
  - Update tests and descriptions to “Prompt mapping”
  - Add minimal micromatch type shim for tsc
  - Document mapping and validate command in README
  - Extend example INI with mapping sections
  - Update project vectorlint.ini to new style
  - Preserve default behavior when mapping absent

--- a/vectorlint.example.ini
+++ b/vectorlint.example.ini
@@ -1,3 +1,19 @@
 PromptsPath=prompts
 ScanPaths=[*.md]
 Concurrency=4
+
+# Optional: map prompts to files
+[Prompts]
+paths=["Default:prompts", "Blog:prompts/blog"]
+
+[Defaults]
+include=["**/*.md"]
+exclude=["archived/**"]
+
+[Directory:Blog]
+include=["content/blog/**/*.md"]
+exclude=["content/blog/drafts/**"]
+
+[Prompt:Headline]
+include=["content/blog/**/*.md"]
+exclude=["content/blog/drafts/**"]
