--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "commander": "^12.0.0",
     "openai": "^4.0.0",
     "strip-ansi": "^7.1.0",
+    "micromatch": "^4.0.5",
     "yaml": "^2.5.0"
   },
   "devDependencies": {
