--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
   ],
   "author": "",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
+    "fast-glob": "^3.3.2",
     "micromatch": "^4.0.5",
     "openai": "^4.0.0",
     "strip-ansi": "^7.1.0",
@@ -42,7 +46,7 @@
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-n": "^17.23.1",
-    "fast-glob": "^3.3.2",
+    "eslint-plugin-unicorn": "^61.0.2",
     "globals": "^16.4.0",
     "tsx": "^4.0.0",
     "typescript": "^5.9.3",
