--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@types/micromatch": "^4.0.9",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "fast-glob": "^3.3.2",
     "micromatch": "^4.0.5",
     "openai": "^4.0.0",
     "strip-ansi": "^7.1.0",
-    "yaml": "^2.5.0"
+    "yaml": "^2.5.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
