--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "moduleResolution": "bundler",
     "esModuleInterop": true,
     "strict": true,
+    "useUnknownInCatchVariables": true,
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true,
     "skipLibCheck": true,
     "outDir": "./dist",
     "rootDir": "./src",
@@ -12,5 +15,5 @@
     "declaration": true
   },
   "include": ["src/**/*", "tests/**/*", "*.config.{js,mjs,ts}"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "tests/**/*"]
 }
