feat: update TypeScript configuration for extensionless imports
- Add allowSyntheticDefaultImports and source map options to main tsconfig.json
- Remove rootDir constraint to prevent conflicts with project structure
- Exclude tests from main config to avoid rootDir issues
- Update tests/tsconfig.json with proper rootDir and include paths
- Enable declarationMap and sourceMap for better debugging support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,16 +4,18 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "useUnknownInCatchVariables": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
     "skipLibCheck": true,
     "outDir": "./dist",
-    "rootDir": "./src",
     "resolveJsonModule": true,
-    "declaration": true
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
   },
-  "include": ["src/**/*", "tests/**/*", "*.config.{js,mjs,ts}"],
-  "exclude": ["node_modules", "dist", "tests/**/*"]
+  "include": ["src/**/*", "*.config.{js,mjs,ts}"],
+  "exclude": ["node_modules", "dist", "tests"]
 }
