--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.30.1",
     "@types/micromatch": "^4.0.9",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
