--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,17 @@
-# Azure OpenAI Configuration
-AZURE_OPENAI_API_KEY=your-api-key-here
-AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com
-AZURE_OPENAI_DEPLOYMENT_NAME=your-deployment-name
-AZURE_OPENAI_API_VERSION=2024-02-15-preview
-AZURE_OPENAI_TEMPERATURE=1
+# LLM Provider Configuration
+# Choose one provider by uncommenting and configuring the corresponding variables
+
+# Option 1: Azure OpenAI
+# LLM_PROVIDER=azure-openai
+# AZURE_OPENAI_API_KEY=your-api-key-here
+# AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com
+# AZURE_OPENAI_DEPLOYMENT_NAME=your-deployment-name
+# AZURE_OPENAI_API_VERSION=2024-02-15-preview
+# AZURE_OPENAI_TEMPERATURE=0.2
+
+# Option 2: Anthropic Claude
+# LLM_PROVIDER=anthropic
+# ANTHROPIC_API_KEY=your-anthropic-api-key-here
+# ANTHROPIC_MODEL=claude-3-sonnet-20240229
+# ANTHROPIC_MAX_TOKENS=4096
+# ANTHROPIC_TEMPERATURE=0.2
