--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@
 # ANTHROPIC_MODEL=claude-3-sonnet-20240229
 # ANTHROPIC_MAX_TOKENS=4096
 # ANTHROPIC_TEMPERATURE=0.2
+
+
+# Search Provider Configuration
+
+# SEARCH_PROVIDER=perplexity
+# PERPLEXITY_API_KEY=pplx-0000000000000000
