--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@
 # ANTHROPIC_MODEL=claude-3-sonnet-20240229
 # ANTHROPIC_MAX_TOKENS=4096
 # ANTHROPIC_TEMPERATURE=0.2
+
+# Option 3: OpenAI
+# LLM_PROVIDER=openai
+# OPENAI_API_KEY=your-openai-api-key-here
+# OPENAI_MODEL=gpt-4o
+# OPENAI_TEMPERATURE=0.2
