feat(config): Add comprehensive Vale configuration and config parsing support
- Add .vale.ini configuration file with default Vale settings
- Enhance config-loader.ts to parse evaluator-specific configuration sections
- Implement parsing for Vale AI context window size configuration
- Add support for enabled evaluators configuration in vectorlint.ini
- Update SuggestionGenerator with improved LLM prompt and documentation
- Refactor config loading to support more flexible configuration options
- Improve error handling and configuration parsing robustness
This change introduces more comprehensive configuration support for VectorLint, specifically focusing on Vale and AI evaluator configurations.

--- a/vectorlint.example.ini
+++ b/vectorlint.example.ini
@@ -2,6 +2,15 @@ PromptsPath=prompts
 ScanPaths=[*.md]
 Concurrency=4
 
+# Optional: Enable evaluators to run automatically with default command
+[Evaluators]
+enabled=["vale-ai"]
+
+# Optional: Configure vale-ai evaluator
+[Evaluator:vale-ai]
+# Number of characters to extract before/after each issue for AI context (default: 100)
+contextWindowSize=100
+
 # Optional: map prompts to files
 [Prompts]
 paths=["Default:prompts", "Blog:prompts/blog"]
