--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,33 +8,7 @@ on:
 
 jobs:
   test:
-    name: Test (Node ${{ matrix.node-version }} on ${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: ['18', '20', '22']
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm run test:run
-
-  coverage:
-    name: Coverage
+    name: Test
     runs-on: ubuntu-latest
     
     steps:
