--- a/.github/workflows/vectorlint.yml
+++ b/.github/workflows/vectorlint.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run VectorLint
-        uses: ayo6706/vectorlint-test-action@v1
+        uses: ./.github/vectorlint-action
         with:
           anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
           reporter: github-pr-check
