chore: add package publishing configuration and narrow linting scope to Markdown files.

--- a/vectorlint.ini
+++ b/vectorlint.ini
@@ -1,7 +1,7 @@
 PromptsPath=prompts
-ScanPaths=["**/*.md", "**/*.mdx"]
+ScanPaths=["**/*.md"]
 Concurrency=4
 
 [Defaults]
-include=["**/*.md", "**/*.mdx"]
+include=["**/*.md"]
 exclude=["node_modules/**", "dist/**", ".github/**"]
