--- a/.github/workflows/vectorlint.yml
+++ b/.github/workflows/vectorlint.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run VectorLint
         uses: ./.github/vectorlint-action
         with:
-          anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
+          gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
           reporter: github-pr-check
           filter_mode: nofilter
           fail_on_error: true
