--- a/package.json
+++ b/package.json
@@ -27,11 +27,24 @@
   ],
   "author": "",
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TRocket-Labs/vectorlint.git"
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE.md"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.30.1",
+    "@google/generative-ai": "^0.24.1",
     "@perplexity-ai/perplexity_ai": "^0.16.0",
     "@types/micromatch": "^4.0.9",
     "chalk": "^5.3.0",
