--- a/.github/workflows/vectorlint.yml
+++ b/.github/workflows/vectorlint.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run VectorLint
         uses: ayo6706/vectorlint-test-action@v1
         with:
-          gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
+          anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
           reporter: github-pr-check
           filter_mode: added
           fail_on_error: false
