chore: pass LLM_PROVIDER to vectorlint-action
- Update vectorlint.yml to pass LLM_PROVIDER secret to action
- Allows explicit provider selection instead of defaulting to azure-openai
- Fixes 'Missing required Azure OpenAI environment variables' error

--- a/.github/workflows/vectorlint.yml
+++ b/.github/workflows/vectorlint.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Run VectorLint
         uses: ayo6706/vectorlint-test-action@v1
         with:
+          llm_provider: ${{ secrets.LLM_PROVIDER }}
           anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
           reporter: github-pr-check
           filter_mode: added
