--- a/vectorlint.ini
+++ b/vectorlint.ini
@@ -1,7 +1,20 @@
-PromptsPath=prompts
-ScanPaths=["**/*.md"]
+PromptsPath=evals
+ScanPaths=[*.md]
 Concurrency=4
+DefaultSeverity=warning
+
+# Optional: map prompts to files
+[Prompts]
+paths=["Default:prompts", "Blog:prompts/blog"]
 
 [Defaults]
 include=["**/*.md"]
-exclude=["node_modules/**", "dist/**", ".github/**"]
+exclude=["archived/**"]
+
+[Directory:Blog]
+include=["content/blog/**/*.md"]
+exclude=["content/blog/drafts/**"]
+
+[Prompt:Headline]
+include=["content/blog/**/*.md"]
+exclude=["content/blog/drafts/**"]
