--- a/.github/workflows/vectorlint.yml
+++ b/.github/workflows/vectorlint.yml
@@ -6,7 +6,7 @@ on:
       - '**/*.md'
       - '**/*.mdx'
       - 'vectorlint.ini'
-      - 'prompts/**'
+      - 'evals/**'
 
 permissions:
   contents: read
@@ -29,7 +29,7 @@ jobs:
           llm_provider: ${{ secrets.LLM_PROVIDER }}
           anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
           openai_api_key: ${{ secrets.OPENAI_API_KEY }}
-          perplexy_api_key: ${{ secrets.PERPLEXITY_API_KEY }}
+          perplexity_api_key: ${{ secrets.PERPLEXITY_API_KEY }}
           reporter: github-pr-check
           filter_mode: added
           fail_on_error: false
