--- a/.github/workflows/vectorlint.yml
+++ b/.github/workflows/vectorlint.yml
@@ -29,6 +29,8 @@ jobs:
           llm_provider: ${{ secrets.LLM_PROVIDER }}
           anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
           openai_api_key: ${{ secrets.OPENAI_API_KEY }}
+          openai_model: ${{ secrets.OPENAI_MODEL }}
+          openai_temperature: ${{ secrets.OPENAI_TEMPERATURE }}
           perplexity_api_key: ${{ secrets.PERPLEXITY_API_KEY }}
           reporter: github-pr-check
           filter_mode: added
