refactor: rename PromptsPath to EvalsPath for consistent terminology
- Updated all config files, schemas, CLI, and tests
- Changed documentation to use consistent 'Eval' naming

--- a/vectorlint.ini.example
+++ b/vectorlint.ini.example
@@ -1,11 +1,11 @@
-PromptsPath=.github/evals   
+EvalsPath=.github/evals   
 ScanPaths=[*.md]
 Concurrency=4
 DefaultSeverity=warning
 
 # Optional: map prompts to files
 [Prompts]
-paths=["Default:prompts", "Blog:prompts/blog"]
+paths=["Default:evals", "Blog:evals/blog"]
 
 [Defaults]
 include=["**/*.md"]
