--- a/package.json
+++ b/package.json
@@ -25,8 +25,16 @@
     "markdown",
     "content QA"
   ],
-  "author": "",
+  "author": "TinyRocket Labs",
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TRocket-Labs/vectorlint.git"
+  },
+  "homepage": "https://vectorlint.dev",
+  "bugs": {
+    "url": "https://github.com/TRocket-Labs/vectorlint/issues"
+  },
   "engines": {
     "node": ">=18.0.0"
   },
