--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "openai": "^4.0.0",
     "strip-ansi": "^7.1.0",
     "yaml": "^2.5.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.25.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
