Fix issue sensoring in evaluation results (#28)
* refactor: rename PromptsPath to EvalsPath for consistent terminology

- Updated all config files, schemas, CLI, and tests
- Changed documentation to use consistent 'Eval' naming

* refactor: clean up severity levels and status

- update package.json for release
- make warning and error severity levels required

* fix: remove sensored scores in output

* style: fix eslint issues

* refactor: update evals to rules for clarity

* fix: update config files to use correct glob pattern format

- Replace obsolete [Prompts]/[Defaults] sections with [pattern] sections
- Use RunRules key to specify rule packs per file pattern
- Update RulesPath from .github/evals to .github/rules
- Add examples for per-evaluator overrides and multi-pack usage

* chore: fix lint issues

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:ci": "vitest run --coverage"
   },
   "bin": {
-    "vectorlint": "./dist/index.js"
+    "vectorlint": "./dist/index.js",
+    "veclint": "./dist/index.js"
   },
   "keywords": [
     "linting",
@@ -25,8 +26,16 @@
     "markdown",
     "content QA"
   ],
-  "author": "",
+  "author": "TinyRocket Labs",
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TRocket-Labs/vectorlint.git"
+  },
+  "homepage": "https://vectorlint.dev",
+  "bugs": {
+    "url": "https://github.com/TRocket-Labs/vectorlint/issues"
+  },
   "engines": {
     "node": ">=18.0.0"
   },
