--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vectorlint",
   "version": "2.0.0",
-  "description": "LLM-based prose linter for subjective writing issues",
+  "description": "An LLM-based prose linter for subjective writing issues",
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
@@ -18,13 +18,24 @@
     "vectorlint": "./dist/index.js",
     "veclint": "./dist/index.js"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE.md"
+  ],
   "keywords": [
+    "cli",
+    "tty",
+    "command-line",
+    "style",
     "linting",
     "content",
     "ai",
     "compliance",
     "markdown",
-    "content QA"
+    "content QA",
+    "prose linter",
+    "vectorlint"
   ],
   "author": "TinyRocket Labs",
   "license": "Apache-2.0",
