feat: implement bundled rule packs (presets)
- Add presets/ directory with meta.json registry
- Implement PresetLoader and refactor to RulePackLoader
- User rules shadow presets with same name
- Rename Eval/Prompt terminology to Rule for consistency

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "markdown",
     "content QA",
     "prose linter",
+    "presets",
+    "vectorlint.ini.example",
     "vectorlint"
   ],
   "author": "TinyRocket Labs",
