Update vectorlint.ini to new version

--- a/vectorlint.ini
+++ b/vectorlint.ini
@@ -1,20 +1,6 @@
-PromptsPath=evals
-ScanPaths=[*.md]
+RulesPath=.github/rules
 Concurrency=4
 DefaultSeverity=warning
 
-# Optional: map prompts to files
-[Prompts]
-paths=["Default:prompts", "Blog:prompts/blog"]
-
-[Defaults]
-include=["**/*.md"]
-exclude=["archived/**"]
-
-[Directory:Blog]
-include=["content/blog/**/*.md"]
-exclude=["content/blog/drafts/**"]
-
-[Prompt:Headline]
-include=["content/blog/**/*.md"]
-exclude=["content/blog/drafts/**"]
+[**/*.md]
+RunRules=TinyRocket
