--- a/.github/workflows/vectorlint.yml
+++ b/.github/workflows/vectorlint.yml
@@ -6,7 +6,6 @@ on:
       - '**/*.md'
       - '**/*.mdx'
       - 'vectorlint.ini'
-      - 'evals/**'
 
 permissions:
   contents: read
@@ -27,11 +26,29 @@ jobs:
         uses: TRocket-Labs/vectorlint-action@v1
         with:
           llm_provider: ${{ secrets.LLM_PROVIDER }}
+          # Anthropic
           anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
+          anthropic_model: ${{ secrets.ANTHROPIC_MODEL }}
+          anthropic_temperature: ${{ secrets.ANTHROPIC_TEMPERATURE }}
+          anthropic_max_tokens: ${{ secrets.ANTHROPIC_MAX_TOKENS }}
+          # OpenAI
           openai_api_key: ${{ secrets.OPENAI_API_KEY }}
           openai_model: ${{ secrets.OPENAI_MODEL }}
           openai_temperature: ${{ secrets.OPENAI_TEMPERATURE }}
+          # Perplexity
           perplexity_api_key: ${{ secrets.PERPLEXITY_API_KEY }}
+          # Gemini
+          gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
+          gemini_model: ${{ secrets.GEMINI_MODEL }}
+          gemini_temperature: ${{ secrets.GEMINI_TEMPERATURE }}
+          # Azure OpenAI
+          azure_openai_api_key: ${{ secrets.AZURE_OPENAI_API_KEY }}
+          azure_openai_endpoint: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
+          azure_openai_deployment_name: ${{ secrets.AZURE_OPENAI_DEPLOYMENT_NAME }}
+          azure_openai_api_version: ${{ secrets.AZURE_OPENAI_API_VERSION }}
+          azure_openai_model: ${{ secrets.AZURE_OPENAI_MODEL }}
+          azure_openai_temperature: ${{ secrets.AZURE_OPENAI_TEMPERATURE }}
+          # Reviewdog options
           reporter: github-pr-check
           filter_mode: added
           fail_on_error: false
