Update vectorlint.ini to .vectorlint.ini in codebase

--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -55,7 +55,7 @@ body:
     id: config
     attributes:
       label: Relevant config (optional)
-      description: "Paste the relevant part of your vectorlint.ini or mention PromptsPath/ScanPaths."
+      description: "Paste the relevant part of your .vectorlint.ini or mention PromptsPath/ScanPaths."
       render: yaml
 
   - type: textarea
