--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "fast-glob": "^3.3.2",
+    "fuzzball": "^2.2.3",
     "micromatch": "^4.0.5",
     "openai": "^4.0.0",
     "strip-ansi": "^7.1.0",
